<resources>
  <string name="app_name">PracticeDesign</string>
  <string name="action_settings">Settings</string>

  <!-- HINTS -->
  <string name="hint_name">NOMBRE</string>
  <string name="hint_lastname">APELLIDOS</string>
  <string name="hint_age">EDAD</string>
  <string name="hint_number_phone">TELEFONO</string>
  <string name="hint_address">DIRECCIÓN</string>
  <string name="hint_email">CORREO ELECTRÓNICO</string>

  <!-- LABEL -->
  <string name="label_sex">Sexo:</string>
  <string name="label_male">Masculino</string>
  <string name="label_female">Femenino</string>
  <string name="label_state">Estados:</string>
  <string name="label_country">Municipio:</string>
  <string name="label_spanish">Español</string>
  <string name="label_mathematics">Matematicas</string>
  <string name="label_history">Historia</string>
  <string name="label_geography">Geografia</string>
  <string name="label_biology">Biologia</string>
  <string name="label_anatomy">Anatomia</string>
  <string name="label_send">Enviar</string>

  <!-- ARRAYS -->
  <string-array name="states">
    <item>Aguascalientes</item>
    <item>Baja California</item>
    <item>Baja California Sur</item>
    <item>Campeche</item>
    <item>Chiapas</item>
    <item>Chihuahua</item>
    <item>Ciudad de México</item>
    <item>Coahuila de Zaragoza</item>
    <item>Colima</item>
    <item>Durango</item>
    <item>Guanajuato</item>
    <item>Guerrero</item>
    <item>Hidalgo</item>
    <item>Jalisco</item>
    <item>México</item>
    <item>Michoacán de Ocampo</item>
    <item>Morelos</item>
    <item>Nayarit</item>
    <item>Nuevo León</item>
    <item>Oaxaca</item>
    <item>Puebla</item>
    <item>Queretaro</item>
    <item>Quintana Roo</item>
    <item>San Luis Potosi</item>
    <item>Sinaloa</item>
    <item>Sonora</item>
    <item>Tabasco</item>
    <item>Tamaulipas</item>
    <item>Tlaxcala</item>
    <item>Veracruz de Ignacio de la Llave</item>
    <item>Yucatán</item>
    <item>Zacatecas</item>
  </string-array>
</resources>
