<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  app:layout_behavior="@string/appbar_scrolling_view_behavior"
  tools:context=".MainActivity"
  tools:showIn="@layout/activity_main">

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
      android:id="@+id/name_TextInputLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_alignParentLeft="true"
      android:layout_alignParentTop="true"
      android:layout_margin="@dimen/edittext_margin"
      android:hint="@string/hint_name">

      <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
      android:id="@+id/lastname_TextInputLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/name_TextInputLayout"
      android:layout_alignParentStart="true"
      android:layout_alignParentLeft="true"
      android:layout_margin="@dimen/edittext_margin"
      android:hint="@string/hint_lastname">

      <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
      android:id="@+id/age_TextInputLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/lastname_TextInputLayout"
      android:layout_alignParentStart="true"
      android:layout_alignParentLeft="true"
      android:layout_margin="@dimen/edittext_margin"
      android:hint="@string/hint_age">

      <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
      android:id="@+id/number_phone_TextInputLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/age_TextInputLayout"
      android:layout_alignParentStart="true"
      android:layout_alignParentLeft="true"
      android:layout_margin="@dimen/edittext_margin"
      android:hint="@string/hint_number_phone">

      <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>

    <TextView
      android:id="@+id/sex_TextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/number_phone_TextInputLayout"
      android:layout_alignParentStart="true"
      android:layout_alignParentLeft="true"
      android:layout_margin="@dimen/label_margin"
      android:text="@string/label_sex" />

    <RadioGroup
      android:id="@+id/sex_RadioGroup"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignTop="@id/sex_TextView"
      android:layout_toEndOf="@id/sex_TextView"
      android:layout_toRightOf="@id/sex_TextView"
      android:orientation="horizontal">

      <RadioButton
        android:id="@+id/male_radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/label_male" />

      <RadioButton
        android:id="@+id/female_radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/label_female" />
    </RadioGroup>

    <android.support.design.widget.TextInputLayout
      android:id="@+id/address_TextInputLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/sex_TextView"
      android:layout_alignParentStart="true"
      android:layout_alignParentLeft="true"
      android:layout_margin="@dimen/edittext_margin"
      android:hint="@string/hint_address">

      <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress" />
    </android.support.design.widget.TextInputLayout>
  </RelativeLayout>
</android.support.v4.widget.NestedScrollView>